--- a/signup-app/package.json
+++ b/signup-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Org79/seller-app",
+  "name": "@Org79/signup-app",
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
